Alignment fixed and images

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -69,3 +69,6 @@
   margin-top: 10px;
   padding: 30px 100px 100px 100px;
 }
+body {
+  font-family: 'Special Elite', Monospace; 
+}
